@@ -1,3 +1,12 @@
+2007-04-13	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ima/dialogs/config.ui:
+	* ima/src/config_widget.cpp:
+	* ima/src/classroom_manager.h:
+	* ima/src/classroom_manager.cpp:
+	* ima/src/client.cpp:
+	added setting for client-double-click-action
+
 2007-04-12	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* common/include/local_system.h:
